parser/mysql/createtable_parser.go
// Code generated from CreateTable.g4 by ANTLR 4.7.2. DO NOT EDIT.

package mysql // CreateTable
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "';'", "','", "'('", "')'", "'!'", "'~'", "'+'", "'-'", "'='",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "AUTO_INCREMENT", "BIGINT", "BINARY",
	"BIT", "BLOB", "BTREE", "BOOLEAN", "BOOL", "CHARACTER", "CHARSET", "CHAR",
	"COLLATE", "COMMENT", "CONSTRAINT", "CREATE", "CURRENT_TIMESTAMP", "DATETIME",
	"DATE", "DECIMAL", "DEC", "DEFAULT", "DOUBLE", "ENGINE", "ENUM", "EXISTS",
	"FALSE", "FIXED", "FLOAT", "HASH", "INDEX", "IF", "INTEGER", "INT", "JSON",
	"KEY_BLOCK_SIZE", "KEY", "LOCALTIMESTAMP", "LOCALTIME", "LONGBLOB", "LONGTEXT",
	"MEDIUMBLOB", "MEDIUMINT", "MEDIUMTEXT", "NATIONAL", "NCHAR", "NOT", "NOW",
	"NULL", "NUMERIC", "NVARCHAR", "ON", "PARSER", "PRECISION", "PRIMARY",
	"REAL", "SERIAL", "SET", "SIGNED", "SMALLINT", "TABLE", "TEMPORARY", "TEXT",
	"TIMESTAMP", "TIME", "TINYBLOB", "TINYINT", "TINYTEXT", "TRUE", "UNIQUE",
	"UNSIGNED", "UPDATE", "USING", "VALUE", "VARBINARY", "VARCHAR", "VARYING",
	"WITH", "YEAR", "ZEROFILL", "Integer", "Number", "FilesizeLiteral", "Literal",
	"PlaceholderString", "BackQuotedString", "RawString", "WS",
}

var ruleNames = []string{
	"root", "createTableDDL", "tableName", "ifNotExists", "createDefinitions",
	"createDefinition", "columnDefinition", "dataType", "lengthOneDimension",
	"lengthTwoDimension", "lengthTwoOptionalDimension", "collectionOptions",
	"columnConstraint", "defaultValue", "unaryOperator", "constant", "currentTimestamp",
	"tableConstraint", "indexOption", "indexType", "indexColumnNames", "tableOption",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type CreateTableParser struct {
	*antlr.BaseParser
}

func NewCreateTableParser(input antlr.TokenStream) *CreateTableParser {
	this := new(CreateTableParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "CreateTable.g4"

	return this
}

// CreateTableParser tokens.
const (
	CreateTableParserEOF               = antlr.TokenEOF
	CreateTableParserT__0              = 1
	CreateTableParserT__1              = 2
	CreateTableParserT__2              = 3
	CreateTableParserT__3              = 4
	CreateTableParserT__4              = 5
	CreateTableParserT__5              = 6
	CreateTableParserT__6              = 7
	CreateTableParserT__7              = 8
	CreateTableParserT__8              = 9
	CreateTableParserAUTO_INCREMENT    = 10
	CreateTableParserBIGINT            = 11
	CreateTableParserBINARY            = 12
	CreateTableParserBIT               = 13
	CreateTableParserBLOB              = 14
	CreateTableParserBTREE             = 15
	CreateTableParserBOOLEAN           = 16
	CreateTableParserBOOL              = 17
	CreateTableParserCHARACTER         = 18
	CreateTableParserCHARSET           = 19
	CreateTableParserCHAR              = 20
	CreateTableParserCOLLATE           = 21
	CreateTableParserCOMMENT           = 22
	CreateTableParserCONSTRAINT        = 23
	CreateTableParserCREATE            = 24
	CreateTableParserCURRENT_TIMESTAMP = 25
	CreateTableParserDATETIME          = 26
	CreateTableParserDATE              = 27
	CreateTableParserDECIMAL           = 28
	CreateTableParserDEC               = 29
	CreateTableParserDEFAULT           = 30
	CreateTableParserDOUBLE            = 31
	CreateTableParserENGINE            = 32
	CreateTableParserENUM              = 33
	CreateTableParserEXISTS            = 34
	CreateTableParserFALSE             = 35
	CreateTableParserFIXED             = 36
	CreateTableParserFLOAT             = 37
	CreateTableParserHASH              = 38
	CreateTableParserINDEX             = 39
	CreateTableParserIF                = 40
	CreateTableParserINTEGER           = 41
	CreateTableParserINT               = 42
	CreateTableParserJSON              = 43
	CreateTableParserKEY_BLOCK_SIZE    = 44
	CreateTableParserKEY               = 45
	CreateTableParserLOCALTIMESTAMP    = 46
	CreateTableParserLOCALTIME         = 47
	CreateTableParserLONGBLOB          = 48
	CreateTableParserLONGTEXT          = 49
	CreateTableParserMEDIUMBLOB        = 50
	CreateTableParserMEDIUMINT         = 51
	CreateTableParserMEDIUMTEXT        = 52
	CreateTableParserNATIONAL          = 53
	CreateTableParserNCHAR             = 54
	CreateTableParserNOT               = 55
	CreateTableParserNOW               = 56
	CreateTableParserNULL              = 57
	CreateTableParserNUMERIC           = 58
	CreateTableParserNVARCHAR          = 59
	CreateTableParserON                = 60
	CreateTableParserPARSER            = 61
	CreateTableParserPRECISION         = 62
	CreateTableParserPRIMARY           = 63
	CreateTableParserREAL              = 64
	CreateTableParserSERIAL            = 65
	CreateTableParserSET               = 66
	CreateTableParserSIGNED            = 67
	CreateTableParserSMALLINT          = 68
	CreateTableParserTABLE             = 69
	CreateTableParserTEMPORARY         = 70
	CreateTableParserTEXT              = 71
	CreateTableParserTIMESTAMP         = 72
	CreateTableParserTIME              = 73
	CreateTableParserTINYBLOB          = 74
	CreateTableParserTINYINT           = 75
	CreateTableParserTINYTEXT          = 76
	CreateTableParserTRUE              = 77
	CreateTableParserUNIQUE            = 78
	CreateTableParserUNSIGNED          = 79
	CreateTableParserUPDATE            = 80
	CreateTableParserUSING             = 81
	CreateTableParserVALUE             = 82
	CreateTableParserVARBINARY         = 83
	CreateTableParserVARCHAR           = 84
	CreateTableParserVARYING           = 85
	CreateTableParserWITH              = 86
	CreateTableParserYEAR              = 87
	CreateTableParserZEROFILL          = 88
	CreateTableParserInteger           = 89
	CreateTableParserNumber            = 90
	CreateTableParserFilesizeLiteral   = 91
	CreateTableParserLiteral           = 92
	CreateTableParserPlaceholderString = 93
	CreateTableParserBackQuotedString  = 94
	CreateTableParserRawString         = 95
	CreateTableParserWS                = 96
)

// CreateTableParser rules.
const (
	CreateTableParserRULE_root                       = 0
	CreateTableParserRULE_createTableDDL             = 1
	CreateTableParserRULE_tableName                  = 2
	CreateTableParserRULE_ifNotExists                = 3
	CreateTableParserRULE_createDefinitions          = 4
	CreateTableParserRULE_createDefinition           = 5
	CreateTableParserRULE_columnDefinition           = 6
	CreateTableParserRULE_dataType                   = 7
	CreateTableParserRULE_lengthOneDimension         = 8
	CreateTableParserRULE_lengthTwoDimension         = 9
	CreateTableParserRULE_lengthTwoOptionalDimension = 10
	CreateTableParserRULE_collectionOptions          = 11
	CreateTableParserRULE_columnConstraint           = 12
	CreateTableParserRULE_defaultValue               = 13
	CreateTableParserRULE_unaryOperator              = 14
	CreateTableParserRULE_constant                   = 15
	CreateTableParserRULE_currentTimestamp           = 16
	CreateTableParserRULE_tableConstraint            = 17
	CreateTableParserRULE_indexOption                = 18
	CreateTableParserRULE_indexType                  = 19
	CreateTableParserRULE_indexColumnNames           = 20
	CreateTableParserRULE_tableOption                = 21
)

// IRootContext is an interface to support dynamic dispatch.
type IRootContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRootContext differentiates from other interfaces.
	IsRootContext()
}

type RootContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRootContext() *RootContext {
	var p = new(RootContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CreateTableParserRULE_root
	return p
}

func (*RootContext) IsRootContext() {}

func NewRootContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RootContext {
	var p = new(RootContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CreateTableParserRULE_root

	return p
}

func (s *RootContext) GetParser() antlr.Parser { return s.parser }

func (s *RootContext) CreateTableDDL() ICreateTableDDLContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreateTableDDLContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICreateTableDDLContext)
}

func (s *RootContext) EOF() antlr.TerminalNode {
	return s.GetToken(CreateTableParserEOF, 0)
}

func (s *RootContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RootContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RootContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CreateTableListener); ok {
		listenerT.EnterRoot(s)
	}
}

func (s *RootContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CreateTableListener); ok {
		listenerT.ExitRoot(s)
	}
}

func (p *CreateTableParser) Root() (localctx IRootContext) {
	localctx = NewRootContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, CreateTableParserRULE_root)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.CreateTableDDL()
	}
	p.SetState(46)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CreateTableParserT__0 {
		{
			p.SetState(45)
			p.Match(CreateTableParserT__0)
		}

	}
	{
		p.SetState(48)
		p.Match(CreateTableParserEOF)
	}

	return localctx
}

// ICreateTableDDLContext is an interface to support dynamic dispatch.
type ICreateTableDDLContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCreateTableDDLContext differentiates from other interfaces.
	IsCreateTableDDLContext()
}

type CreateTableDDLContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCreateTableDDLContext() *CreateTableDDLContext {
	var p = new(CreateTableDDLContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CreateTableParserRULE_createTableDDL
	return p
}

func (*CreateTableDDLContext) IsCreateTableDDLContext() {}

func NewCreateTableDDLContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CreateTableDDLContext {
	var p = new(CreateTableDDLContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CreateTableParserRULE_createTableDDL

	return p
}

func (s *CreateTableDDLContext) GetParser() antlr.Parser { return s.parser }

func (s *CreateTableDDLContext) CREATE() antlr.TerminalNode {
	return s.GetToken(CreateTableParserCREATE, 0)
}

func (s *CreateTableDDLContext) TABLE() antlr.TerminalNode {
	return s.GetToken(CreateTableParserTABLE, 0)
}

func (s *CreateTableDDLContext) TableName() ITableNameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITableNameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITableNameContext)
}

func (s *CreateTableDDLContext) CreateDefinitions() ICreateDefinitionsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreateDefinitionsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICreateDefinitionsContext)
}

func (s *CreateTableDDLContext) TEMPORARY() antlr.TerminalNode {
	return s.GetToken(CreateTableParserTEMPORARY, 0)
}

func (s *CreateTableDDLContext) IfNotExists() IIfNotExistsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIfNotExistsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIfNotExistsContext)
}

func (s *CreateTableDDLContext) AllTableOption() []ITableOptionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITableOptionContext)(nil)).Elem())
	var tst = make([]ITableOptionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITableOptionContext)
		}
	}

	return tst
}

func (s *CreateTableDDLContext) TableOption(i int) ITableOptionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITableOptionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITableOptionContext)
}

func (s *CreateTableDDLContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CreateTableDDLContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CreateTableDDLContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CreateTableListener); ok {
		listenerT.EnterCreateTableDDL(s)
	}
}

func (s *CreateTableDDLContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CreateTableListener); ok {
		listenerT.ExitCreateTableDDL(s)
	}
}

func (p *CreateTableParser) CreateTableDDL() (localctx ICreateTableDDLContext) {
	localctx = NewCreateTableDDLContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, CreateTableParserRULE_createTableDDL)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(50)
		p.Match(CreateTableParserCREATE)
	}
	p.SetState(52)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CreateTableParserTEMPORARY {
		{
			p.SetState(51)
			p.Match(CreateTableParserTEMPORARY)
		}

	}
	{
		p.SetState(54)
		p.Match(CreateTableParserTABLE)
	}
	p.SetState(56)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CreateTableParserIF {
		{
			p.SetState(55)
			p.IfNotExists()
		}

	}
	{
		p.SetState(58)
		p.TableName()
	}
	{
		p.SetState(59)
		p.CreateDefinitions()
	}
	p.SetState(70)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if ((_la-10)&-(0x1f+1)) == 0 && ((1<<uint((_la-10)))&((1<<(CreateTableParserAUTO_INCREMENT-10))|(1<<(CreateTableParserCHARACTER-10))|(1<<(CreateTableParserCHARSET-10))|(1<<(CreateTableParserCOLLATE-10))|(1<<(CreateTableParserCOMMENT-10))|(1<<(CreateTableParserDEFAULT-10))|(1<<(CreateTableParserENGINE-10)))) != 0 {
		{
			p.SetState(60)
			p.TableOption()
		}
		p.SetState(67)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for ((_la-2)&-(0x1f+1)) == 0 && ((1<<uint((_la-2)))&((1<<(CreateTableParserT__1-2))|(1<<(CreateTableParserAUTO_INCREMENT-2))|(1<<(CreateTableParserCHARACTER-2))|(1<<(CreateTableParserCHARSET-2))|(1<<(CreateTableParserCOLLATE-2))|(1<<(CreateTableParserCOMMENT-2))|(1<<(CreateTableParserDEFAULT-2))|(1<<(CreateTableParserENGINE-2)))) != 0 {
			p.SetState(62)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			if _la == CreateTableParserT__1 {
				{
					p.SetState(61)
					p.Match(CreateTableParserT__1)
				}

			}
			{
				p.SetState(64)
				p.TableOption()
			}

			p.SetState(69)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	}

	return localctx
}

// ITableNameContext is an interface to support dynamic dispatch.
type ITableNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTableNameContext differentiates from other interfaces.
	IsTableNameContext()
}

type TableNameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTableNameContext() *TableNameContext {
	var p = new(TableNameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CreateTableParserRULE_tableName
	return p
}

func (*TableNameContext) IsTableNameContext() {}

func NewTableNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TableNameContext {
	var p = new(TableNameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CreateTableParserRULE_tableName

	return p
}

func (s *TableNameContext) GetParser() antlr.Parser { return s.parser }

func (s *TableNameContext) BackQuotedString() antlr.TerminalNode {
	return s.GetToken(CreateTableParserBackQuotedString, 0)
}

func (s *TableNameContext) RawString() antlr.TerminalNode {
	return s.GetToken(CreateTableParserRawString, 0)
}

func (s *TableNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TableNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TableNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CreateTableListener); ok {
		listenerT.EnterTableName(s)
	}
}

func (s *TableNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CreateTableListener); ok {
		listenerT.ExitTableName(s)
	}
}

func (p *CreateTableParser) TableName() (localctx ITableNameContext) {
	localctx = NewTableNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, CreateTableParserRULE_tableName)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(72)
		_la = p.GetTokenStream().LA(1)

		if !(_la == CreateTableParserBackQuotedString || _la == CreateTableParserRawString) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IIfNotExistsContext is an interface to support dynamic dispatch.
type IIfNotExistsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsIfNotExistsContext differentiates from other interfaces.
	IsIfNotExistsContext()
}

type IfNotExistsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}
